[#18] feat: 배포 관련 파일 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,6 @@ spring:
     hibernate:
       ddl-auto: create
 
-
 logging:
   level:
     org.hibernate.orm.jdbc.bind: trace
@@ -30,3 +29,6 @@ logging:
 
 gpt:
   key: ${GPT_API_KEY}
+
+server:
+  port: 5000
