--- a/.platform/nginx/conf.d/myconf.conf
+++ b/.platform/nginx/conf.d/myconf.conf
@@ -5,7 +5,7 @@ server {
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, name';
             add_header 'Access-Control-Max-Age' 86400;
             return 204;
         }
