[#23] chore: nginx 설정 수정

--- a/.platform/nginx/conf.d/myconf.conf
+++ b/.platform/nginx/conf.d/myconf.conf
@@ -1,5 +1,5 @@
 server {
-    server_name api.woowa.chat;
+    server_name api.teco.chat;
 
     location / {
         if ($request_method = 'OPTIONS') {
