--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
+archivesBaseName = "tecochat"
 group = 'chat.teco'
 sourceCompatibility = '17'
 
