--- a/.platform/nginx/conf.d/myconf.conf
+++ b/.platform/nginx/conf.d/myconf.conf
@@ -6,10 +6,12 @@ server {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, PATCH, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, name';
+            add_header 'Access-Control-Expose-Headers' 'Location' always;
             add_header 'Access-Control-Max-Age' 86400;
             return 204;
         }
         add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Expose-Headers' 'Location' always;
         add_header 'Content-Type' 'application/json' always;
         proxy_pass http://localhost:5000/;
     }
