--- a/.platform/nginx/conf.d/myconf.conf
+++ b/.platform/nginx/conf.d/myconf.conf
@@ -10,6 +10,10 @@ server {
             add_header 'Access-Control-Max-Age' 86400;
             return 204;
         }
+        proxy_connect_timeout 180;
+        proxy_send_timeout 180;
+        proxy_read_timeout 180;
+        send_timeout 180;
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Expose-Headers' 'Location' always;
         add_header 'Content-Type' 'application/json' always;
