--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
     implementation "org.flywaydb:flyway-mysql"
+
+    implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
