--- a/.platform/nginx/conf.d/myconf.conf
+++ b/.platform/nginx/conf.d/myconf.conf
@@ -11,7 +11,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
-        proxy_pass http://localhost:5000/;
+        proxy_pass http://localhost:5000/stream/chats;
     }
 
     location / {
