--- a/.platform/nginx/conf.d/myconf.conf
+++ b/.platform/nginx/conf.d/myconf.conf
@@ -2,15 +2,12 @@ server {
     server_name api.teco.chat;
 
     location /stream/chats {
-        proxy_connect_timeout 180;
-        proxy_send_timeout 180;
-        proxy_read_timeout 180;
-        send_timeout 180;
-        add_header 'Access-Control-Allow-Headers' 'name';
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
+        proxy_set_header Origin "";
+
         proxy_pass http://localhost:5000/stream/chats/;
     }
 
