--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.rest-assured:rest-assured'
+    testImplementation 'io.kotest:kotest-runner-junit5:5.8.0'
+    testImplementation 'io.kotest.extensions:kotest-extensions-spring:1.1.2'
+    testImplementation 'com.ninja-squad:springmockk:4.0.2'
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.20'
 
