--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ plugins {
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.jetbrains.kotlin.jvm' version "1.9.20"
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.20'
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.20'
 }
 
 archivesBaseName = "tecochat"
@@ -49,6 +51,7 @@ dependencies {
     testImplementation 'com.ninja-squad:springmockk:4.0.2'
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.20'
+    runtimeOnly 'org.jetbrains.kotlin:kotlin-reflect:1.9.20'
 
     // QueryDSL 설정
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
